testdata/baselines/reference/submodule/compiler/jsxPartialSpread.errors.txt
jsxPartialSpread.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxPartialSpread.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    const Select = (p: {value?: unknown}) => <p></p>;
    import React from 'react';
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    export function Repro({ SelectProps = {} }: { SelectProps?: Partial<Parameters<typeof Select>[0]> }) {
        return (
            <Select value={'test'} {...SelectProps} />
        );
    }